<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".tap_food">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="23sp"
            android:textColor="#000000"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/imageView11"
            app:layout_constraintStart_toEndOf="@+id/imageView11"
            app:layout_constraintTop_toTopOf="@+id/imageView11" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:layout_marginStart="115dp"
            android:src="@drawable/increase"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/textView11"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:src="@drawable/decrease"
            android:visibility="gone"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView11"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toTopOf="@+id/imageView11" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_order_now"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/order_now"
            android:textColor="#FFFFFF"
            android:visibility="gone"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="Rs 199"
            android:layout_marginTop="7dp"
            android:textColor="#000000"
            android:textSize="23sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/price"
            android:textColor="#4D3C3C"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:background="@drawable/bg_tap_food_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="140dp"
            android:layout_height="51dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_half_full"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="1dp"
                android:src="@drawable/bowl" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="107dp"
                android:layout_height="50dp"
                android:layout_marginStart="-15dp"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:text="@string/half"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="288dp"
                tools:layout_editor_absoluteY="446dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout4"
            android:layout_width="140dp"
            android:layout_height="51dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_half_full"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/linearLayout3">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="1dp"
                android:src="@drawable/bowl" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="107dp"
                android:layout_height="50dp"
                android:layout_marginStart="-15dp"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:text="@string/full_"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="288dp"
                tools:layout_editor_absoluteY="446dp" />

        </LinearLayout>


        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/description"
            android:textColor="#4D3C3C"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/quicksand_medium"
            android:maxLines="5"
            android:text="@string/a_sweet_buns_of_burger_served_with_a_delicious_crisped_corn_with_a_combo_of_salted_fries"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:layout_marginEnd="28dp"
            android:src="@drawable/cart"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            app:layout_constraintVertical_bias="0.25" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/veg"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/crispy_corn_burger"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="246dp"
            android:scaleType="centerCrop"
            android:src="@drawable/tap_food_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>